--- a/slides/Introduction.html
+++ b/slides/Introduction.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="" xml:lang="">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="" xml:lang="">
   <head>
     <title>Stat 218 Introduction</title>
     <meta charset="utf-8" />
@@ -35,11 +35,10 @@ class:inverse, middle, center
 ## Getting Help
 
 - My office: Hardin Hall (East Campus) 349a    
-TR 1:30-3 (e.g. before class)
+TR 11:30-1    
+Zoom is an option
 
-- TA office hours: TBD
-
-- Grader office hours: TBD
+- TA office hours: Mondays, 2:15 - 3:15 PM, Wednesdays 9:30 - 10:30 AM
 
 - Other times by appointment
 
@@ -54,14 +53,14 @@ TR 1:30-3 (e.g. before class)
 - Quizzes: 15%
 - Homework/Participation: 25%
 
-If you have to miss an exam, you must notify me beforehand. 
+If you have to miss an exam, you must make arrangements with me beforehand. 
 
 No late homework will be accepted
 
 ---
 ## Disabilities
 
-- University resources if you have (or think you have) a disability requiring accommodation    
+- University resources if you have (or think you have) a disability requiring accommodation:    
 232 Canfield Admin Building, (402) 472-3787
 
 - Reasonable accommodations may include: extra time on tests/quizzes, testing room (quiet, low distraction environment), etc.
@@ -110,10 +109,23 @@ class:inverse, middle, center
 ---
 ## Group Assignments
 
+- Check Canvas
+
+- Sit in your groups
+
+- One person needs to bring a laptop to each class
+
+- In-class activities will be submitted on canvas in groups
 
 
 ---
-## Exploration
+## Handouts
+
+I'll occasionally post handouts as announcements. 
+
+If you want the paper copy, print it out.
+
+PDFs of slides are available online if you want them (see canvas announcement)
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
