Updated pdf and html slides

--- a/slides/index.html
+++ b/slides/index.html
@@ -385,7 +385,7 @@ summary {
 <td align="left">Chapter 1 Significance</td>
 <td align="left"><a href="chapter-1-significance.pdf">Link</a></td>
 <td align="left"><a href="chapter-1-significance-2.pdf">Link</a></td>
-<td align="left">NA</td>
+<td align="left"><a href="chapter-1-significance-3.pdf">Link</a></td>
 <td align="left"><a href="chapter-1-significance-4.pdf">Link</a></td>
 <td align="left"><a href="chapter-1-significance.html">Link</a></td>
 </tr>
