--- a/slides/index.html
+++ b/slides/index.html
@@ -371,55 +371,127 @@ summary {
 
 <table>
 <thead>
-<tr class="header">
-<th align="left">Chapter</th>
-<th align="left">1 per page PDF</th>
-<th align="left">2 per page PDF</th>
-<th align="left">3 per page PDF</th>
-<th align="left">4 per page PDF</th>
-<th align="left">HTML</th>
+<tr>
+<th style="text-align:left;">
+Chapter
+</th>
+<th style="text-align:left;">
+1 per page PDF
+</th>
+<th style="text-align:left;">
+2 per page PDF
+</th>
+<th style="text-align:left;">
+3 per page PDF
+</th>
+<th style="text-align:left;">
+4 per page PDF
+</th>
+<th style="text-align:left;">
+HTML
+</th>
 </tr>
 </thead>
 <tbody>
-<tr class="odd">
-<td align="left">Chapter 1 Significance</td>
-<td align="left"><a href="chapter-1-significance.pdf">Link</a></td>
-<td align="left"><a href="chapter-1-significance-2.pdf">Link</a></td>
-<td align="left"><a href="chapter-1-significance-3.pdf">Link</a></td>
-<td align="left"><a href="chapter-1-significance-4.pdf">Link</a></td>
-<td align="left"><a href="chapter-1-significance.html">Link</a></td>
+<tr>
+<td style="text-align:left;">
+Chapter 1 Significance
+</td>
+<td style="text-align:left;">
+<a href="chapter-1-significance.pdf">Link</a>
+</td>
+<td style="text-align:left;">
+<a href="chapter-1-significance-2.pdf">Link</a>
+</td>
+<td style="text-align:left;">
+<a href="chapter-1-significance-3.pdf">Link</a>
+</td>
+<td style="text-align:left;">
+<a href="chapter-1-significance-4.pdf">Link</a>
+</td>
+<td style="text-align:left;">
+<a href="chapter-1-significance.html">Link</a>
+</td>
 </tr>
-<tr class="even">
-<td align="left">Chapter 2 Generalization</td>
-<td align="left"><a href="chapter-2-generalization.pdf">Link</a></td>
-<td align="left"><a href="chapter-2-generalization-2.pdf">Link</a></td>
-<td align="left"><a href="chapter-2-generalization-3.pdf">Link</a></td>
-<td align="left"><a href="chapter-2-generalization-4.pdf">Link</a></td>
-<td align="left"><a href="chapter-2-generalization.html">Link</a></td>
+<tr>
+<td style="text-align:left;">
+Chapter 2 Generalization
+</td>
+<td style="text-align:left;">
+<a href="chapter-2-generalization.pdf">Link</a>
+</td>
+<td style="text-align:left;">
+<a href="chapter-2-generalization-2.pdf">Link</a>
+</td>
+<td style="text-align:left;">
+<a href="chapter-2-generalization-3.pdf">Link</a>
+</td>
+<td style="text-align:left;">
+<a href="chapter-2-generalization-4.pdf">Link</a>
+</td>
+<td style="text-align:left;">
+<a href="chapter-2-generalization.html">Link</a>
+</td>
 </tr>
-<tr class="odd">
-<td align="left">Chapter 3 Estimation</td>
-<td align="left"><a href="chapter-3-estimation.pdf">Link</a></td>
-<td align="left"><a href="chapter-3-estimation-2.pdf">Link</a></td>
-<td align="left"><a href="chapter-3-estimation-3.pdf">Link</a></td>
-<td align="left"><a href="chapter-3-estimation-4.pdf">Link</a></td>
-<td align="left"><a href="chapter-3-estimation.html">Link</a></td>
+<tr>
+<td style="text-align:left;">
+Chapter 3 Estimation
+</td>
+<td style="text-align:left;">
+<a href="chapter-3-estimation.pdf">Link</a>
+</td>
+<td style="text-align:left;">
+<a href="chapter-3-estimation-2.pdf">Link</a>
+</td>
+<td style="text-align:left;">
+<a href="chapter-3-estimation-3.pdf">Link</a>
+</td>
+<td style="text-align:left;">
+<a href="chapter-3-estimation-4.pdf">Link</a>
+</td>
+<td style="text-align:left;">
+<a href="chapter-3-estimation.html">Link</a>
+</td>
 </tr>
-<tr class="even">
-<td align="left">Chapter P Preliminaries</td>
-<td align="left"><a href="chapter-P-preliminaries.pdf">Link</a></td>
-<td align="left"><a href="chapter-P-preliminaries-2.pdf">Link</a></td>
-<td align="left"><a href="chapter-P-preliminaries-3.pdf">Link</a></td>
-<td align="left"><a href="chapter-P-preliminaries-4.pdf">Link</a></td>
-<td align="left"><a href="chapter-P-preliminaries.html">Link</a></td>
+<tr>
+<td style="text-align:left;">
+Chapter P Preliminaries
+</td>
+<td style="text-align:left;">
+<a href="chapter-P-preliminaries.pdf">Link</a>
+</td>
+<td style="text-align:left;">
+<a href="chapter-P-preliminaries-2.pdf">Link</a>
+</td>
+<td style="text-align:left;">
+<a href="chapter-P-preliminaries-3.pdf">Link</a>
+</td>
+<td style="text-align:left;">
+<a href="chapter-P-preliminaries-4.pdf">Link</a>
+</td>
+<td style="text-align:left;">
+<a href="chapter-P-preliminaries.html">Link</a>
+</td>
 </tr>
-<tr class="odd">
-<td align="left">Introduction</td>
-<td align="left"><a href="Introduction.pdf">Link</a></td>
-<td align="left"><a href="Introduction-2.pdf">Link</a></td>
-<td align="left"><a href="Introduction-3.pdf">Link</a></td>
-<td align="left"><a href="Introduction-4.pdf">Link</a></td>
-<td align="left"><a href="Introduction.html">Link</a></td>
+<tr>
+<td style="text-align:left;">
+Introduction
+</td>
+<td style="text-align:left;">
+<a href="Introduction.pdf">Link</a>
+</td>
+<td style="text-align:left;">
+<a href="Introduction-2.pdf">Link</a>
+</td>
+<td style="text-align:left;">
+<a href="Introduction-3.pdf">Link</a>
+</td>
+<td style="text-align:left;">
+<a href="Introduction-4.pdf">Link</a>
+</td>
+<td style="text-align:left;">
+<a href="Introduction.html">Link</a>
+</td>
 </tr>
 </tbody>
 </table>
