Updated pdf and html slides

--- a/slides/index.html
+++ b/slides/index.html
@@ -406,6 +406,14 @@ summary {
 <td align="left"><a href="chapter-3-estimation.html">Link</a></td>
 </tr>
 <tr class="even">
+<td align="left">Chapter 4 Causation</td>
+<td align="left"><a href="chapter-4-causation.pdf">Link</a></td>
+<td align="left"><a href="chapter-4-causation-2.pdf">Link</a></td>
+<td align="left"><a href="chapter-4-causation-3.pdf">Link</a></td>
+<td align="left"><a href="chapter-4-causation-4.pdf">Link</a></td>
+<td align="left"><a href="chapter-4-causation.html">Link</a></td>
+</tr>
+<tr class="odd">
 <td align="left">Chapter 5 Two Proportions</td>
 <td align="left"><a href="chapter-5-two-proportions.pdf">Link</a></td>
 <td align="left"><a href="chapter-5-two-proportions-2.pdf">Link</a></td>
@@ -413,7 +421,7 @@ summary {
 <td align="left"><a href="chapter-5-two-proportions-4.pdf">Link</a></td>
 <td align="left"><a href="chapter-5-two-proportions.html">Link</a></td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td align="left">Chapter P Preliminaries</td>
 <td align="left"><a href="chapter-P-preliminaries.pdf">Link</a></td>
 <td align="left"><a href="chapter-P-preliminaries-2.pdf">Link</a></td>
@@ -421,13 +429,21 @@ summary {
 <td align="left"><a href="chapter-P-preliminaries-4.pdf">Link</a></td>
 <td align="left"><a href="chapter-P-preliminaries.html">Link</a></td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td align="left">Introduction</td>
 <td align="left"><a href="Introduction.pdf">Link</a></td>
 <td align="left"><a href="Introduction-2.pdf">Link</a></td>
 <td align="left"><a href="Introduction-3.pdf">Link</a></td>
 <td align="left"><a href="Introduction-4.pdf">Link</a></td>
 <td align="left"><a href="Introduction.html">Link</a></td>
+</tr>
+<tr class="even">
+<td align="left">Show Hidden</td>
+<td align="left"><a href="show-hidden.pdf">Link</a></td>
+<td align="left"><a href="show-hidden-2.pdf">Link</a></td>
+<td align="left"><a href="show-hidden-3.pdf">Link</a></td>
+<td align="left"><a href="show-hidden-4.pdf">Link</a></td>
+<td align="left"><a href="show-hidden.html">Link</a></td>
 </tr>
 </tbody>
 </table>
