Updated ch7 worksheet + update to code to split titles off

--- a/handouts/index.html
+++ b/handouts/index.html
@@ -376,7 +376,7 @@ summary {
 </thead>
 <tbody>
 <tr class="odd">
-<td align="left">00_P</td>
+<td align="left">00_P_</td>
 <td align="left"><a href="00_P_Introduction_and_Syllabus.pdf">Introduction and Syllabus</a></td>
 <td align="left"></td>
 </tr>
@@ -409,6 +409,11 @@ summary {
 <td align="left">06</td>
 <td align="left"><a href="06_Difference_Means.pdf">Difference Means</a></td>
 <td align="left"><a href="06_Difference_Means_key.pdf">Key</a></td>
+</tr>
+<tr class="even">
+<td align="left">07</td>
+<td align="left"><a href="07_Paired.pdf">Paired</a></td>
+<td align="left"><a href="07_Paired_key.pdf">Key</a></td>
 </tr>
 </tbody>
 </table>
