makefile force updates of all index files

--- a/handouts/index.html
+++ b/handouts/index.html
@@ -415,6 +415,11 @@ summary {
 <td align="left"><a href="07_Paired.pdf">Paired</a></td>
 <td align="left"><a href="07_Paired_key.pdf">Key</a></td>
 </tr>
+<tr class="odd">
+<td align="left">10</td>
+<td align="left"><a href="10_Regression.pdf">Regression</a></td>
+<td align="left"><a href="10_Regression_key.pdf">Key</a></td>
+</tr>
 </tbody>
 </table>
 
